--- a/web/src/assets/css/03_components/_cta.scss
+++ b/web/src/assets/css/03_components/_cta.scss
@@ -1,13 +1,12 @@
 .cta {
-    font-size: 1.125rem;
+    font-size: clamp(1rem, 3vw, 1.125rem);
     display: inline-flex;
     align-items: center;
-    padding: .75em 1.25em;
-    column-gap: .5rem;
-    background-color: var(--c-mist);
-    color: var(--c-charcoal);
-    border-radius: .375rem;
-    font-weight: 500;
+    padding: 1em 1.5em;
+    column-gap: 1rem;
+    background-color: var(--c-white);
+    color: var(--c-void);
+    font-weight: 500; 
     text-decoration: none;
     
     svg {
@@ -27,10 +26,10 @@
     }
 
     &.secondary {
-        background-color: var(--c-mist);
-        color: var(--c-gravel);
+        background-color: var(--c-void);
+        color: var(--c-white);
         &:hover {
-            background-color: var(--c-stone);
+            background-color: var(--c-charcoal);
         }
     }
 
