--- a/web/src/assets/css/03_components/_hero.scss
+++ b/web/src/assets/css/03_components/_hero.scss
@@ -6,26 +6,27 @@
     display: grid;
     grid-template-columns: 1fr;
     gap: 2rem;
-    
+
     @media (min-width: 1200px) {
         grid-template-columns: repeat(3, 1fr);
     }
 }
 
 .hero-content {
-    font-size: 1.25rem;
     line-height: 1.5;
-    font-weight: 500;
     padding-right: 2rem;
+    font-size: clamp(1.125rem, 3vw, 1.25rem);
 }
 
 .hero-navigation {
     display: grid;
     grid-template-columns: 1fr;
     gap: 2rem;
+
     @media (min-width: 600px) {
         grid-template-columns: repeat(2, 1fr);
     }
+
     @media (min-width: 1200px) {
         grid-column: 2 / 4;
     }
@@ -37,20 +38,226 @@
     padding: 2rem;
     background-color: #eee;
     text-decoration: none;
-    aspect-ratio: 4 / 3;
+    min-height: 10rem;
+    transition: .15s ease;
+
+    &:nth-of-type(1) {
+        background-color: #C6E8D3;
+    }
+
+    &:nth-of-type(2) {
+        background-color: #FFD89C;
+    }
+
+    &:nth-of-type(3) {
+        background-color: #B7E6FF;
+    }
+
+    &:nth-of-type(4) {
+        background-color: #FFD8FC;
+    }
+
+    &:focus-visible {
+        outline: 3px solid #000;
+        outline-offset: 3px;
+        transform: rotate(5deg);
+    }
 }
 
 .hero-navigation-item-title {
     font-weight: 600;
-    font-size: clamp(1rem, 3vw, 1.25rem);
+    font-size: clamp(1rem, 3vw, 1.375rem);
 }
 
 .hero-navigation-item-description {
     font-size: clamp(1rem, 3vw, 1.125rem);
-    margin-top: .375em;
+    margin-top: .5em;
 }
 
 .hero-navigation-item-icon {
     margin-top: auto;
     padding-top: 2rem;
+}
+
+.showcase {
+    margin-top: 8rem;
+    padding-top: 4rem;
+    padding-bottom: 4rem;
+    background-color: var(--c-void);
+    color: var(--c-white);
+    overflow: hidden;
+}
+
+.showcase-content-title {
+    font-size: clamp(1.5rem, 3vw, 2rem);
+}
+
+.showcase-gallery {
+    margin-top: 2rem;
+    display: flex;
+    gap: 4rem;
+    position: relative;
+    width: 100%;
+    overflow: visible;
+}
+
+.showcase-button {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    background-color: var(--c-white);
+    border: 2px solid var(--c-void);
+    width: 2.5rem;
+    height: 2.5rem;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 10;
+    cursor: pointer;
+
+    @media (min-width: 1200px) {
+        width: 4rem;
+        height: 4rem;
+        border-width: 4px;
+    }
+
+    &.prev {
+        left: -.5rem;
+
+        @media (min-width: 1200px) {
+            right: calc(100% + 1rem);
+            left: unset;
+        }
+    }
+
+    &.next {
+        right: -.5rem;
+
+        @media (min-width: 1200px) {
+            left: calc(100% + 1rem);
+            right: unset;
+        }
+    }
+}
+
+.showcase-item {
+    width: 100%;
+    flex-shrink: 0;
+    display: flex;
+    flex-direction: column;
+    transition: .25s ease-in-out;
+}
+
+.showcase-item-image {
+    img {
+        object-fit: cover;
+        aspect-ratio: 16 / 9;
+        object-position: top center;
+        width: 100%;
+    }
+}
+
+.showcase-item-content {
+    display: inline-flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-top: 1.5rem;
+    max-width: 60ch;
+}
+
+.showcase-item-title {
+    text-decoration: none;
+    font-size: clamp(1.125rem, 3vw, 1.25rem);
+    font-weight: 600;
+}
+
+.showcase-item-description {
+    font-size: clamp(1rem, 3vw, 1.125rem);
+    margin-top: .375em;
+}
+
+.showcase-footer {
+    margin-top: 5rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+
+.pricing {
+    margin-top: 8rem;
+}
+
+.price-categories {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 3rem;
+    justify-content: center;
+}
+
+.price-category {
+    background-color: #EEE;
+    padding: 2.5rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+    width: min(100%, 450px);
+}
+
+.price-category-title {
+    font-size: clamp(1.25rem, 3vw, 1.375rem);
+}
+
+.price-category-price {
+    margin-top: 0.5rem;
+    margin-bottom: 1rem;
+    display: flex;
+    gap: 12px;
+    align-items: flex-end;
+
+    span:first-child {
+        color: var(--c-text-secondary);
+        font-size: 1.125rem;
+    }
+
+    span:last-child {
+        font-weight: 600;
+        font-size: 2.5rem;
+        line-height: 1;
+    }
+}
+
+.price-category-description {
+    font-size: clamp(1rem, 3vw, 1.125rem);
+    margin-bottom: 1em;
+    margin-top: .375em;
+}
+
+.price-category-body {
+    font-size: clamp(1rem, 3vw, 1.125rem);
+
+    p {
+        margin-bottom: 1rem;
+    }
+
+    ul {
+        list-style: none;
+        margin: 0;
+        padding: 0;
+        display: flex;
+        flex-direction: column;
+        gap: 1em;
+    }
+
+    li {
+        display: flex;
+        align-items: center;
+        gap: .625em;
+
+        i {
+            flex-shrink: 0;
+            color: var(--c-emerald);
+        }
+    }
 }
