--- a/web/src/assets/css/styles.css
+++ b/web/src/assets/css/styles.css
@@ -67,7 +67,7 @@ button {
   font-stretch: 75% 125%;
 }
 :root {
-  --font-primary: "Golos Text", "Hanken Grotesk", "IBM Plex Sans", "Mona Sans", sans-serif;
+  --font-primary: "IBM Plex Sans", "Mona Sans", sans-serif;
   --font-secondary: "Hubot Sans", "Fraunces", serif;
   --indigo-100: #e0e7ff;
   --indigo-200: #c7d2fe;
@@ -154,7 +154,7 @@ b {
 }
 
 .constraint {
-  width: 94%;
+  width: 90%;
   max-width: 1280px;
   margin-left: auto;
   margin-right: auto;
@@ -164,6 +164,11 @@ b {
 }
 .constraint.wide {
   max-width: 2000px;
+}
+
+*:focus-visible {
+  outline: 3px solid;
+  outline-offset: 3px;
 }
 
 .section {
@@ -235,15 +240,14 @@ b {
 }
 
 .cta {
-  font-size: 1.125rem;
+  font-size: clamp(1rem, 3vw, 1.125rem);
   display: inline-flex;
   align-items: center;
-  padding: 0.75em 1.25em;
-  -moz-column-gap: 0.5rem;
-       column-gap: 0.5rem;
-  background-color: var(--c-mist);
-  color: var(--c-charcoal);
-  border-radius: 0.375rem;
+  padding: 1em 1.5em;
+  -moz-column-gap: 1rem;
+       column-gap: 1rem;
+  background-color: var(--c-white);
+  color: var(--c-void);
   font-weight: 500;
   text-decoration: none;
 }
@@ -261,11 +265,11 @@ b {
   background-color: var(--c-indigo-dark);
 }
 .cta.secondary {
-  background-color: var(--c-mist);
-  color: var(--c-gravel);
+  background-color: var(--c-void);
+  color: var(--c-white);
 }
 .cta.secondary:hover {
-  background-color: var(--c-stone);
+  background-color: var(--c-charcoal);
 }
 .cta.ghost {
   background-color: var(--c-transparent);
@@ -423,7 +427,6 @@ b {
   flex-direction: column;
   align-items: center;
   row-gap: 1rem;
-  border-radius: 8px;
 }
 @media (min-width: 1000px) {
   .callout {
@@ -446,7 +449,7 @@ b {
 @media (min-width: 1000px) {
   .callout-title {
     text-align: left;
-    font-size: 2rem;
+    font-size: 1.5rem;
   }
 }
 
@@ -459,7 +462,7 @@ b {
 }
 
 .footer {
-  margin-top: 6rem;
+  margin-top: 8rem;
 }
 
 .footer-inner {
@@ -468,8 +471,8 @@ b {
   align-items: center;
   row-gap: 1rem;
   flex-wrap: wrap;
-  padding-top: 3rem;
-  padding-bottom: 3rem;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
   text-align: center;
 }
 @media (min-width: 1000px) {
@@ -515,111 +518,50 @@ b {
   background-color: var(--c-facebook);
 }
 
-.header {
-  background-color: var(--c-bg-primary);
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-  border-bottom: 1px solid var(--c-border-primary);
-}
-@media (min-width: 700px) {
-  .header {
-    padding-top: 1.25rem;
-    padding-bottom: 1.25rem;
-  }
-}
-@media (min-width: 1280px) {
-  .header {
-    border-bottom: 0;
-    padding-top: 2rem;
-    padding-bottom: 2rem;
-  }
-}
-
 .header-inner {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  gap: 1.5rem;
-  font-size: 1.125rem;
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+}
+
+.header-nav ul {
+  list-style: none;
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 1.25rem;
+  padding: 0;
+}
+.header-nav a {
+  display: none;
+  font-weight: 600;
+  text-decoration: none;
+}
+@media (min-width: 1000px) {
+  .header-nav a {
+    display: inline-flex;
+  }
+}
+
+.main-nav-toggle {
+  border: 0;
+  padding: 0.5em;
+  font-weight: 600;
+  line-height: 1.15;
+  cursor: pointer;
+}
+@media (min-width: 1000px) {
+  .main-nav-toggle {
+    display: none;
+  }
 }
 
 .header-logo {
-  line-height: 1;
-}
-.header-logo a {
-  display: flex;
-  font-size: 1.5rem;
+  font-weight: 600;
+  line-height: 1.15;
   text-decoration: none;
-  height: 50px;
-}
-@media (min-width: 1000px) {
-  .header-logo a {
-    height: 60px;
-  }
-}
-@media (min-width: 1280px) {
-  .header-logo a {
-    height: 70px;
-  }
-}
-.header-logo svg, .header-logo img {
-  height: 100%;
-  width: auto;
-}
-
-.header-nav {
-  display: none;
-  font-weight: 500;
-}
-@media (min-width: 1280px) {
-  .header-nav {
-    display: block;
-  }
-}
-.header-nav ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  display: flex;
-  align-items: center;
-  -moz-column-gap: 0.75rem;
-       column-gap: 0.75rem;
-}
-
-.header-nav-item {
-  display: inline-flex;
-  padding: 0.5em 1em;
-  background-color: transparent;
-  border-radius: 0.375rem;
-  text-decoration: none;
-  background-color: var(--c-bg-secondary);
-  color: var(--c-text-primary);
-}
-.header-nav-item.primary {
-  background-color: var(--c-action-primary);
-  color: var(--gray-000);
-}
-.header-nav-item.primary:hover {
-  background-color: var(--c-action-primary-hover);
-}
-
-.header-mobile-button {
-  padding: 0;
-  border: 0;
-  line-height: 1;
-  width: 3rem;
-  height: 3rem;
-  font-size: 1rem;
-  display: flex;
-  flex-direction: column;
-  gap: 0.25rem;
-  align-items: center;
-  justify-content: center;
-}
-@media (min-width: 1280px) {
-  .header-mobile-button {
-    display: none;
-  }
 }
 
 .hero {
@@ -638,10 +580,9 @@ b {
 }
 
 .hero-content {
-  font-size: 1.25rem;
   line-height: 1.5;
-  font-weight: 500;
   padding-right: 2rem;
+  font-size: clamp(1.125rem, 3vw, 1.25rem);
 }
 
 .hero-navigation {
@@ -666,22 +607,217 @@ b {
   padding: 2rem;
   background-color: #eee;
   text-decoration: none;
-  aspect-ratio: 4/3;
+  min-height: 10rem;
+  transition: 0.15s ease;
+}
+.hero-navigation-item:nth-of-type(1) {
+  background-color: #C6E8D3;
+}
+.hero-navigation-item:nth-of-type(2) {
+  background-color: #FFD89C;
+}
+.hero-navigation-item:nth-of-type(3) {
+  background-color: #B7E6FF;
+}
+.hero-navigation-item:nth-of-type(4) {
+  background-color: #FFD8FC;
+}
+.hero-navigation-item:focus-visible {
+  outline: 3px solid #000;
+  outline-offset: 3px;
+  transform: rotate(5deg);
 }
 
 .hero-navigation-item-title {
   font-weight: 600;
-  font-size: clamp(1rem, 3vw, 1.25rem);
+  font-size: clamp(1rem, 3vw, 1.375rem);
 }
 
 .hero-navigation-item-description {
   font-size: clamp(1rem, 3vw, 1.125rem);
-  margin-top: 0.375em;
+  margin-top: 0.5em;
 }
 
 .hero-navigation-item-icon {
   margin-top: auto;
   padding-top: 2rem;
+}
+
+.showcase {
+  margin-top: 8rem;
+  padding-top: 4rem;
+  padding-bottom: 4rem;
+  background-color: var(--c-void);
+  color: var(--c-white);
+  overflow: hidden;
+}
+
+.showcase-content-title {
+  font-size: clamp(1.5rem, 3vw, 2rem);
+}
+
+.showcase-gallery {
+  margin-top: 2rem;
+  display: flex;
+  gap: 4rem;
+  position: relative;
+  width: 100%;
+  overflow: visible;
+}
+
+.showcase-button {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  background-color: var(--c-white);
+  border: 2px solid var(--c-void);
+  width: 2.5rem;
+  height: 2.5rem;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 10;
+  cursor: pointer;
+}
+@media (min-width: 1200px) {
+  .showcase-button {
+    width: 4rem;
+    height: 4rem;
+    border-width: 4px;
+  }
+}
+.showcase-button.prev {
+  left: -0.5rem;
+}
+@media (min-width: 1200px) {
+  .showcase-button.prev {
+    right: calc(100% + 1rem);
+    left: unset;
+  }
+}
+.showcase-button.next {
+  right: -0.5rem;
+}
+@media (min-width: 1200px) {
+  .showcase-button.next {
+    left: calc(100% + 1rem);
+    right: unset;
+  }
+}
+
+.showcase-item {
+  width: 100%;
+  flex-shrink: 0;
+  display: flex;
+  flex-direction: column;
+  transition: 0.25s ease-in-out;
+}
+
+.showcase-item-image img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  aspect-ratio: 16/9;
+  -o-object-position: top center;
+     object-position: top center;
+  width: 100%;
+}
+
+.showcase-item-content {
+  display: inline-flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin-top: 1.5rem;
+  max-width: 60ch;
+}
+
+.showcase-item-title {
+  text-decoration: none;
+  font-size: clamp(1.125rem, 3vw, 1.25rem);
+  font-weight: 600;
+}
+
+.showcase-item-description {
+  font-size: clamp(1rem, 3vw, 1.125rem);
+  margin-top: 0.375em;
+}
+
+.showcase-footer {
+  margin-top: 5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.pricing {
+  margin-top: 8rem;
+}
+
+.price-categories {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 3rem;
+  justify-content: center;
+}
+
+.price-category {
+  background-color: #EEE;
+  padding: 2.5rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+  width: min(100%, 450px);
+}
+
+.price-category-title {
+  font-size: clamp(1.25rem, 3vw, 1.375rem);
+}
+
+.price-category-price {
+  margin-top: 0.5rem;
+  margin-bottom: 1rem;
+  display: flex;
+  gap: 12px;
+  align-items: flex-end;
+}
+.price-category-price span:first-child {
+  color: var(--c-text-secondary);
+  font-size: 1.125rem;
+}
+.price-category-price span:last-child {
+  font-weight: 600;
+  font-size: 2.5rem;
+  line-height: 1;
+}
+
+.price-category-description {
+  font-size: clamp(1rem, 3vw, 1.125rem);
+  margin-bottom: 1em;
+  margin-top: 0.375em;
+}
+
+.price-category-body {
+  font-size: clamp(1rem, 3vw, 1.125rem);
+}
+.price-category-body p {
+  margin-bottom: 1rem;
+}
+.price-category-body ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
+}
+.price-category-body li {
+  display: flex;
+  align-items: center;
+  gap: 0.625em;
+}
+.price-category-body li i {
+  flex-shrink: 0;
+  color: var(--c-emerald);
 }
 
 .gallery-list-wrapper {
@@ -1108,144 +1244,4 @@ b {
 }
 .fact-box a:hover {
   box-shadow: 0 3px 0 0 currentColor;
-}
-
-.l-constraint {
-  display: grid;
-  grid-template-columns: 1fr min(90%, 1280px) 1fr;
-}
-.l-constraint > * {
-  grid-column: 2/3;
-}
-
-.l-grid {
-  display: grid;
-  grid-template-columns: repeat(12, 1fr);
-}
-.l-grid > * {
-  grid-column: 1/-1;
-}
-
-.c-page {
-  font-size: clamp(1rem, 3vw, 1.125rem);
-  padding-bottom: 100px;
-  margin-top: 4rem;
-  gap: 0;
-}
-.c-page > * {
-  grid-column: 1/-1;
-}
-@media (min-width: 1200px) {
-  .c-page > * {
-    grid-column: 4/10;
-  }
-}
-
-.c-header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding-top: 3rem;
-  padding-bottom: 3rem;
-}
-
-.c-header-nav {
-  display: flex;
-  align-items: center;
-  flex-wrap: wrap;
-  gap: 1.25rem;
-}
-.c-header-nav a {
-  display: none;
-  font-weight: 600;
-  text-decoration: none;
-}
-@media (min-width: 1000px) {
-  .c-header-nav a {
-    display: inline-flex;
-  }
-}
-
-.c-main-nav-toggle {
-  border: 0;
-  padding: 0.5em;
-  font-weight: 600;
-  line-height: 1.15;
-  cursor: pointer;
-}
-@media (min-width: 1000px) {
-  .c-main-nav-toggle {
-    display: none;
-  }
-}
-
-.c-header-logo {
-  font-weight: 600;
-  line-height: 1.15;
-}
-
-.c-page-title {
-  font-size: 36px;
-  line-height: 1.125;
-  font-size: clamp(1.75rem, 3vw, 2.25rem);
-}
-
-.c-page-leading {
-  margin-top: 0.75em;
-  font-size: clamp(1.125rem, 3vw, 1.5rem);
-}
-
-.c-info {
-  padding: 1.5rem;
-  background-color: #e7e5e5;
-  margin-top: 2rem;
-}
-@media (min-width: 1200px) {
-  .c-info {
-    grid-column: 2/12;
-  }
-}
-@media (min-width: 1400px) {
-  .c-info {
-    grid-column: 3/11;
-  }
-}
-
-.c-info-columns {
-  display: grid;
-  grid-template-columns: 1fr;
-  background-color: #CCC;
-  gap: 1px;
-}
-@media (min-width: 1200px) {
-  .c-info-columns {
-    grid-template-columns: repeat(3, 1fr);
-  }
-}
-
-.c-info-column {
-  background-color: #e7e5e5;
-  font-size: 1.125rem;
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-}
-@media (min-width: 1200px) {
-  .c-info-column {
-    padding-left: 1rem;
-    padding-right: 1rem;
-  }
-}
-.c-info-column strong {
-  display: block;
-  font-size: 1.25rem;
-}
-
-p {
-  margin-top: 1.5em;
-}
-
-.img-full-bleed {
-  grid-column: 1/13;
-  width: 100%;
-  margin-top: 3em;
 }
