--- a/web/src/includes/footer.njk
+++ b/web/src/includes/footer.njk
@@ -2,14 +2,13 @@
     <div class="constraint">
         <div class="callout">
             <h2 class="callout-title">{{ siteFooter.title }}</h2>
-            {% if siteFooter.footerLinks %}  
+            {% if siteFooter.footerLinks %}
                 <div class="callout-actions">
                     {% for item in siteFooter.footerLinks %}
-                        <a href="{% if item.linkType == "isInternal" %}/{{ item.internalUrl.slug.current }}{% endif %}{% if item.linkType == "isExternal" %}{{ item.externalUrl }}{% endif %}" class="cta{{ " | primary" if item.isPrimary }}">
-                            <span>{{ item.linkText }}</span>
-                            {% if item.linkIcon %}
-                                {% include "icons/" + item.linkIcon + ".svg" ignore missing %}
-                            {% endif %}
+                        <a href="#" class="cta | primary">
+                            <span>Send forespørsel</span>
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path fill="currentColor" d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"/>
+                            </svg>
                         </a>
                     {% endfor %}
                 </div>
