--- a/web/src/assets/css/01_settings/_media-queries.scss
+++ b/web/src/assets/css/01_settings/_media-queries.scss
@@ -1,7 +1,7 @@
 $small-breakpoint: 500px;
 $medium-breakpoint: 700px;
 $large-breakpoint: 1000px;
-$x-large-breakpoint: $max-content-width;
+$x-large-breakpoint: 1400px;
 $huge-breakpoint: 2000px;
 
 @mixin small-screen {
