--- a/web/src/assets/css/03_components/_header.scss
+++ b/web/src/assets/css/03_components/_header.scss
@@ -1,102 +1,73 @@
-.header {
-  background-color: var(--c-bg-primary);
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-  border-bottom: 1px solid var(--c-border-primary);
-  @include medium-screen {
-    padding-top: 1.25rem;
-    padding-bottom: 1.25rem;
-  }
-  @include x-large-screen {
-    border-bottom: 0;
+.header-inner {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
     padding-top: 2rem;
     padding-bottom: 2rem;
-  }
-}
-
-.header-inner {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  gap: 1.5rem;
-  font-size: 1.125rem;
+    color: var(--c-text-secondary);
 }
 
 .header-logo {
-  line-height: 1;
-  a {
-    display: flex;
-    font-size: 1.5rem;
     text-decoration: none;
-    height: 50px;
-    @include large-screen {
-      height: 60px;
+    font-weight: 700;
+    font-size: var(--font-size-m);
+    line-height: 1.25;
+    padding: .375em .75em;
+    border-radius: 4px;
+    margin-left: -.75em;
+
+    &:hover,
+    &:focus {
+        background-color: var(--c-background-tertiary);
     }
-    
-    @include x-large-screen {
-      height: 70px;
-    }
-  }
-  
-  svg, img {
-    height: 100%;
-    width: auto; 
-  }
 }
 
 .header-nav {
-  display: none;
-  font-weight: 500;
-  @include x-large-screen {
-    display: block;
-  }
+    display: none;
+    @include x-large-screen {
+        display: flex;
+    }
 
-  ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
+    ul {
+        list-style: none;
+        margin: 0;
+        padding: 0;
+        display: flex;
+        align-items: center;
+        column-gap: .125em;
+    }
+
+    a {
+        text-decoration: none;
+        font-size: var(--font-size-xs);
+        padding: .625em 1em;
+        border-radius: 4px;
+        font-weight: 500;
+
+        &:hover,
+        &:focus {
+            background-color: var(--c-background-tertiary);
+        }
+    }
+}
+
+.header-menu-toggle {
+    border: 0;
     display: flex;
     align-items: center;
-    column-gap: .75rem;
-  }
-}
-
-.header-nav-item {
-  display: inline-flex;
-  padding: .5em 1em;
-  background-color: transparent;
-  border-radius: 0.375rem;
-  text-decoration: none;
-  background-color: var(--c-bg-secondary);
-  color: var(--c-text-primary);
-  &:hover {
-  }
-
-  &.primary {
-    background-color: var(--c-action-primary);
-    color: var(--gray-000);
-    &:hover {
-      background-color: var(--c-action-primary-hover);
+    justify-content: center;
+    column-gap: .375em;
+    border-radius: 4px;
+    color: inherit;
+    padding: .625em .75em .625em 1em;
+    background-color: var(--c-background-tertiary);
+    font-size: var(--font-size-xs);
+    @include x-large-screen {
+        display: none;
     }
-  }
 }
 
-.header-mobile-button {
-  padding: 0;
-  border: 0;
-  line-height: 1;
-  width: 3rem;
-  height: 3rem;
-  font-size: 1rem;
-  display: flex;
-  flex-direction: column;
-  gap: 0.25rem;
-  align-items: center;
-  justify-content: center;
-
-  @include x-large-screen {
-    display: none;
-  }
+.header-menu-toggle-icon {
+    flex-shrink: 0;
+    color: var(--c-text-primary);
 }
-
-
