--- a/web/src/assets/css/03_components/_hero.scss
+++ b/web/src/assets/css/03_components/_hero.scss
@@ -1,56 +1,45 @@
 .hero {
-    margin-top: 4rem;
-}
-
-.hero-inner {
     display: grid;
-    grid-template-columns: 1fr;
-    gap: 2rem;
+    align-items: flex-start;
+    row-gap: 3rem;
+    margin-top: 2.5rem;
+
+    @include large-screen {
+        grid-template-columns: 1fr 1.25fr;
+        column-gap: 4rem;
+        margin-top: 4rem;
+    }
     
-    @media (min-width: 1200px) {
-        grid-template-columns: repeat(3, 1fr);
+    @include x-large-screen {
+        grid-template-columns: 1fr 1fr;
+        column-gap: 6rem;
     }
 }
 
 .hero-content {
-    font-size: 1.25rem;
-    line-height: 1.5;
+    @include large-screen {
+        padding-block: 2em;
+    }
+}
+
+.hero-content-title {
+    font-size: var(--font-size-xs);
+    letter-spacing: .1em;
+    text-transform: uppercase;
+    font-family: var(--font-primary);
     font-weight: 500;
-    padding-right: 2rem;
 }
 
-.hero-navigation {
-    display: grid;
-    grid-template-columns: 1fr;
-    gap: 2rem;
-    @media (min-width: 600px) {
-        grid-template-columns: repeat(2, 1fr);
+.hero-content-intro {
+    font-size: var(--font-size-xl);
+    line-height: 1.375;
+    color: var(--c-text-secondary);
+    margin-top: 1em;
+    font-family: var(--font-secondary);
+
+    &+.button {
+        margin-top: 2.5em;
+        font-size: var(--font-size-s);
     }
-    @media (min-width: 1200px) {
-        grid-column: 2 / 4;
-    }
 }
 
-.hero-navigation-item {
-    display: flex;
-    flex-direction: column;
-    padding: 2rem;
-    background-color: #eee;
-    text-decoration: none;
-    aspect-ratio: 4 / 3;
-}
-
-.hero-navigation-item-title {
-    font-weight: 600;
-    font-size: clamp(1rem, 3vw, 1.25rem);
-}
-
-.hero-navigation-item-description {
-    font-size: clamp(1rem, 3vw, 1.125rem);
-    margin-top: .375em;
-}
-
-.hero-navigation-item-icon {
-    margin-top: auto;
-    padding-top: 2rem;
-}
