--- a/web/src/assets/css/03_components/_introduction.scss
+++ b/web/src/assets/css/03_components/_introduction.scss
@@ -29,7 +29,7 @@
 }
 
 .introduction-title {
-    font-size: var(--font-size-xl);
+    font-size: var(--font-size-xxl);
     line-height: 1.25;
     font-weight: 400;
     color: var(--c-text-secondary);
