--- a/web/src/assets/css/00_reset/_reset.scss
+++ b/web/src/assets/css/00_reset/_reset.scss
@@ -42,6 +42,7 @@ p, h1, h2, h3, h4, h5, h6 {
 button {
    border: 1px solid;
    background-color: transparent;
+   cursor: pointer;
 }
 
 @media (prefers-reduced-motion: reduce) {
