--- a/web/src/assets/css/03_components/_button.scss
+++ b/web/src/assets/css/03_components/_button.scss
@@ -2,25 +2,36 @@
     display: inline-flex;
     align-items: center;
     padding: .75em 1.5em;
-    column-gap: .5rem;
-    background-color: var(--c-background-secondary);
+    column-gap: .5em;
+    background-image: linear-gradient(45deg, #313035, #222326); // TODO
     color: var(--c-text-secondary);
     border-radius: .375rem;
     font-weight: 500;
     text-decoration: none;
-    
+    transition: opacity .15s ease;
     svg {
         flex-shrink: 0;
     }
+
+    &:hover {
+        opacity: .8;
+    }
     
     &.primary {
-        background-color: var(--c-blue-2);
+        background-image: linear-gradient(45deg, #387AFB, #2D66D7); // TODO
         color: var(--c-text-secondary);
+        &:hover {
+            background: var(--c-blue-1);
+        }
     }
 
     &.full-width {
         width: 100%;
         justify-content: center;
         text-align: center;
+    }
+
+    &.has-icon {
+        padding-right: 1.375em;
     }
 }
