--- a/web/src/assets/css/03_components/_slideshow.scss
+++ b/web/src/assets/css/03_components/_slideshow.scss
@@ -8,7 +8,8 @@
     grid-template-columns: 1fr auto 1fr;
     align-items: center;
     gap: .5rem;
-    @include medium-screen {        
+
+    @include medium-screen {
         gap: 2rem;
     }
 }
@@ -25,21 +26,24 @@
     color: var(--c-text-secondary);
     padding: 0;
     cursor: pointer;
-    
+
     @include medium-screen {
         width: 4rem;
         height: 4rem;
-    } 
+    }
+
     svg {
         width: 1.25rem;
         height: 1.25rem;
+
         @include medium-screen {
             width: 2rem;
             height: 2rem;
         }
     }
 
-    &:hover, &:focus {
+    &:hover,
+    &:focus {
         box-shadow: inset 0 0 0 .25rem var(--c-background-secondary);
         background-color: var(--c-background-tertiary);
     }
@@ -59,17 +63,38 @@
     margin: 0;
 }
 
+
 .slideshow-item {
-    padding: .75rem;
-    border-radius: .375rem;
-    background-color: var(--c-background-secondary);
-    border: 1px solid var(--c-divider);
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+}
+
+.slideshow-item-image {
 
     img {
         aspect-ratio: 16 / 9;
         object-fit: cover;
         object-position: top center;
-        border-radius: .25rem;
     }
 }
 
+.slideshow-item-content-wrapper {
+    display: flex;
+    align-items: flex-start;
+    gap: 1rem 2rem;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.slideshow-item-title {
+    font-size: var(--font-size-m);
+    font-weight: 500;
+    font-family: var(--font-secondary);
+    color: var(--c-text-secondary);
+}
+
+.slideshow-item-description {
+    font-size: var(--font-size-xs);
+    max-width: 60ch;
+}
